[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/DoorTransition.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/idcard.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/UI.gd" type="Script" id=3]
[ext_resource path="res://shaders/crt_material.tres" type="Material" id=5]
[ext_resource path="res://assets/ui/vitals/Portrait1.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/vitals/Portrait0.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/vitals/Vitals.gd" type="Script" id=8]
[ext_resource path="res://assets/ui/vitals/VitalBar0.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/vitals/VitalBar1.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/vitals/VitalBar2.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/vitals/VitalBar3.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/vitals/VitalBar4.png" type="Texture" id=13]
[ext_resource path="res://assets/Main.gd" type="Script" id=20]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( -3.03143, -3.03143 ),
"update": 0,
"values": [ -0.1, 100.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 270, 175 ), Vector2( 270, 141 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -15.0, 0.0 ]
}

[node name="Main" type="Node"]
script = ExtResource( 20 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -85.5
margin_right = 152.0
margin_bottom = 85.5
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vitals" type="Control" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -36.0
margin_right = 116.0
margin_bottom = -1.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureRect" parent="CanvasLayer/UI/Vitals"]
margin_left = 28.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 46.0
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaWhite" type="TextureProgress" parent="CanvasLayer/UI/Vitals"]
margin_left = 28.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 30.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaProgress" type="TextureProgress" parent="CanvasLayer/UI/Vitals"]
margin_left = 28.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 30.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthWhite" type="TextureProgress" parent="CanvasLayer/UI/Vitals"]
margin_left = 28.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 30.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthProgress" type="TextureProgress" parent="CanvasLayer/UI/Vitals"]
margin_left = 28.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 30.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureProgress" parent="CanvasLayer/UI/Vitals"]
margin_right = 35.0
margin_bottom = 35.0
mouse_filter = 2
step = 0.01
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 7
radial_initial_angle = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/Vitals/Portrait"]
anims/Transition = SubResource( 1 )

[node name="ID" type="TextureRect" parent="CanvasLayer/UI"]
margin_left = 270.0
margin_top = 175.0
margin_right = 294.0
margin_bottom = 199.0
rect_rotation = -15.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="CanvasLayer/UI/ID"]
modulate = Color( 0, 0, 0, 0.447059 )
show_behind_parent = true
margin_top = 2.0
margin_right = 24.0
margin_bottom = 26.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/ID"]
anims/Show = SubResource( 2 )

[node name="CRT" type="ColorRect" parent="CanvasLayer"]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DoorTransition" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="CanvasLayer/DoorTransition"]
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="CanvasLayer/DoorTransition"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/DoorTransition"]

[node name="ColorModule" type="CanvasModulate" parent="."]
color = Color( 0.862745, 0.87451, 0.913725, 1 )
